[gd_scene load_steps=4 format=2]

[ext_resource path="res://Yggdrasil_Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Jeu.gd" type="Script" id=2]
[ext_resource path="res://calm1.wav" type="AudioStream" id=3]

[node name="Jeu" type="Node2D"]
script = ExtResource( 2 )
Yggdrasil_Main = ExtResource( 1 )

[node name="Yggdrasil_Main" parent="." instance=ExtResource( 1 )]

[node name="TimerGameOver" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="timeout" from="TimerGameOver" to="." method="_on_TimerGameOver_timeout"]
